[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/animalSpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://outlineMaterial.tres" type="Material" id=2]
[ext_resource path="res://Scripts/JournalIcon.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="JournalIcon" type="AnimatedSprite"]
material = ExtResource( 2 )
position = Vector2( 14, 52 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "catShadow"
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -28, -104 )
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14, 52 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_CatArea_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_CatArea_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_CatArea_mouse_exited"]
